[gd_scene load_steps=6 format=3 uid="uid://c1bvun2118wqn"]

[ext_resource type="PackedScene" uid="uid://ccx5plagqbxeg" path="res://characters/human/human.tscn" id="1_fe1r1"]
[ext_resource type="Script" path="res://characters/movement.gd" id="2_njvqx"]
[ext_resource type="Script" path="res://characters/collision_layer_constraint.gd" id="3_su5fm"]
[ext_resource type="Script" path="res://characters/Label.gd" id="4_vywlv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_jqdl2"]
radius = 114.018

[node name="player" node_paths=PackedStringArray("movement_constraint") instance=ExtResource("1_fe1r1")]
script = ExtResource("2_njvqx")
movement_constraint = NodePath("movement_constraint")

[node name="movement_constraint" type="Node" parent="." index="2"]
script = ExtResource("3_su5fm")
constrain_to_layers = 16

[node name="camera" type="Camera2D" parent="." index="3"]

[node name="detection_area" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area" index="0"]
position = Vector2(1, -24)
shape = SubResource("CircleShape2D_jqdl2")

[node name="Label" type="Label" parent="." index="5"]
z_index = 2
offset_left = 278.0
offset_top = -314.0
offset_right = 415.0
offset_bottom = -288.0
scale = Vector2(2.08, 2.08)
script = ExtResource("4_vywlv")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
